Fix article tag layout issue with extra column

--- a/styles.css
+++ b/styles.css
@@ -124,7 +124,7 @@ footer {
 
 article {
   display: grid;
-  grid-template-columns: repeat(4, 25%);
+  grid-template-columns: 10% 45% 45%;
   grid-template-rows: 2;
   grid-column-gap: 1rem;
   grid-template-areas:
